Fixed style-home-00 spotlight header alignment problem
Reason added tons of superfluous mark-up to the spotlight section.  Reason's default_styles.css was adding 12 pixel top and bottom margins to div.relatedPub div.moduleNav ul li.  I overrode this and set the margins to zero with a secletor of higher specificity.

--- a/stylesheets/luther2010/master.css
+++ b/stylesheets/luther2010/master.css
@@ -1198,6 +1198,13 @@ nav.button a:focus {
  padding:0 260px 0 0;
  position:relative;
 }
+
+/* Added to override 12px top and bottom margins specified in default_styles.css
+*/
+.container-events-news-and-spotlight .spotlight div.relatedPub div.moduleNav ul li {
+ margin:0;
+}
+
 .content-tertiary .spotlight article {
  padding:0;
 }
